--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
                     loading="eager"
                 >
             </div>
-            <h1>AI Dnas</h1>
+            <h1>AI DNAs</h1>
         </div>
     </header>
     <main>
